fix text not showing black on devices

--- a/frontend/src/styles/shared.module.css
+++ b/frontend/src/styles/shared.module.css
@@ -22,6 +22,7 @@
 .btn {
     background-color: white;
     border-width: 1px;
+    color: black;
 }
 
 .medbtn {
